--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
+ENV PYTHONUNBUFFERED=1
+
+COPY .env .env
+
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
